# nightfall-fw

./: .codeiumignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  mkdocs.yml
.devin/workflows/: write-micromouse-blog-post.md
.github/workflows/: pages.yml
.windsurf/rules/: 10-codex-delegation.md
.windsurf/workflows/: close-handoff.md  delegate-heavy-task.md  migrate-micromouse-blog-post.md  write-micromouse-blog-post.md
_sandbox/f413_preorder/: README.md
_sandbox/f413_preorder/cubemx_project/: README.md
_sandbox/f413_preorder/cubemx_project/HM_Nightfall_f413_preorder/: Makefile
_sandbox/f413_preorder/notes/: README.md  f413_cad_pin_list.md
board/classic_r1_0/: README.md
board/mini_r1_0/: README.md
cmake/: gcc-arm-none-eabi.cmake  gen_build_info.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: EXPERIMENT_LOG.md  F413_CONTROL_TUNING_PRECHECK.md  F413_HARDWARE_BRINGUP_CHECKLIST.md  F413_INTERNAL_FLASH_TEMP_VERIFICATION_CHECKLIST.md  MODE_CASE_20260214.md  NIGHTFALL_FW_2026_DEVELOPMENT_PLAN.md  NIGHTFALL_FW_DEV_POLICY.md  NVM_IDENTITY_BLOCK_OPERATION.md  NVM_IDENTITY_BLOCK_SPEC.md  NVM_MIGRATION_PLAN.md  NVM_TRACE_LOG_FORMAT_SPEC.md  PHASE0_INVENTORY.md  PHASE2_CHECKLIST.md  PHASE3_CHECKLIST.md  STABLE_VERSION_GUIDE.md
docs/ai/: CODEX_ONBOARDING.md  F413_PORTING_STATE.md  F413_SENSOR_DISTANCE_DESIGN.md  GIT_GITHUB_POLICY.md  HIL_SAFETY.md  README.md  STATE.md  WORKLOG.md
docs/ai/HANDOFFS/: README.md
docs/ai/archive/: AGENTS.md
docs/blog/: POST_TEMPLATE.md  README.md
docs/blog/javascripts/: twitter-embed.js
docs/blog/machines/cyberrat-2024/: README.md
docs/blog/machines/history-half-mix-juice-2020/: README.md
docs/blog/machines/history-mix-juice-2019/: README.md
docs/blog/machines/nightfall-2023/: README.md
docs/blog/machines/nightfall-air-2025/: README.md
docs/blog/machines/nightfall-lite-2024/: README.md
docs/blog/machines/nightfall-mini-2025/: README.md
docs/blog/machines/wmmc-standard-nucleo-2022/: README.md
docs/blog/posts/: index.md
docs/blog/posts/2022-12-15_nucleo-standard-mouse/: README.md
docs/blog/posts/2023-12-08_micromouse-carrying-case/: README.md
docs/blog/posts/2023-12-19_ca-161-bis-introduction/: README.md
docs/blog/posts/2024-05-04_nightfall-parts/: README.md
docs/blog/posts/2024-05-09_classic-dc-footwork/: README.md
docs/blog/posts/2024-12-26_2024-season-machines/: README.md
docs/blog/posts/2025-12-14_2025-micromouse-retrospective/: README.md
docs/blog/posts/2026-04-05_classic-dc-footwork-improved/: README.md
docs/blog/stylesheets/: github-dark.css
docs/blog_admin/: MIGRATION_PLAN.md  MIGRATION_TRACKER.md  POST_TEMPLATE.md
hardware/: README.md
hardware/classic_r1_0/: README.md
hardware/classic_r1_0/bom/: README.md
hardware/classic_r1_0/cad/: README.md
hardware/classic_r1_0/cad/eagle/: CM_Nightfall-Air_Fan-Mount_v1.brd  CM_Nightfall-Air_v1.brd  CM_Nightfall-Air_v1.sch  Skirt-Base-PCB.brd  dxfimp.scr
hardware/classic_r1_0/notes/: README.md
hardware/mini_r1_0/: README.md
hardware/mini_r1_0/bom/: README.md
hardware/mini_r1_0/cad/: HM_Nightfall-mini_v1.sch  README.md
hardware/mini_r1_0/cad/eagle/: HM_Nightfall-mini_Fan-Mount_v1.brd  HM_Nightfall-mini_v1.brd  dxfimp.scr
hardware/mini_r1_0/notes/: README.md
hardware/mini_r2_0/: README.md
hardware/mini_r2_0/bom/: README.md
hardware/mini_r2_0/cad/: HM_Nightfall-mini-2e_v1.brd
hardware/mini_r2_0/cad/eagle/: HM_Nightfall-mini-2e_Encoder-PCB-L_v1.brd  HM_Nightfall-mini-2e_Encoder-PCB-L_v1.sch  HM_Nightfall-mini-2e_Encoder-PCB-R_v1.brd  HM_Nightfall-mini-2e_Encoder-PCB-R_v1.sch  HM_Nightfall-mini-2e_v1.sch  HM_Nightfall-mini_v1.cam  STLink-Adapter.brd  STLink-Adapter.sch  UART-Adapter.brd  UART-Adapter.sch  dxfimp.scr
hardware/mini_r2_0/notes/kicad/: HM_Nightfall-mini-2e_Encoder-PCB-L_v1.drc-jlc-report.txt  HM_Nightfall-mini-2e_Encoder-PCB-L_v1.drc-report.txt  HM_Nightfall-mini-2e_Encoder-PCB-L_v1.erc-report.txt  HM_Nightfall-mini-2e_Encoder-PCB-R_v1.drc-jlc-report.txt  HM_Nightfall-mini-2e_Encoder-PCB-R_v1.drc-report.txt  HM_Nightfall-mini-2e_v1.drc-jlc-report.txt  (+11 more)
nvm/: README.md  nvm.c  nvm.h  nvm_identity.c  nvm_identity.h  nvm_params.c  nvm_params.h  nvm_trace_log.c  nvm_trace_log.h
params/classic_r1_0/: params.h  shortest_run_params_split.c
params/classic_v2/: params.h  search_run_params_split.c  shortest_case_params.csv  shortest_run_params_split.c  shortest_turn_bank.csv
params/f413_preorder/: params.h  search_run_params_split.c  sensor_distance_calibration.csv  sensor_distance_lut.c  shortest_run_params_split.c
params/mini_r1_0/: params.h
params/mini_v1_1/: params.h  search_run_params_split.c  shortest_run_params_split.c  shortest_turn_bank.csv
platform/stm32f405/: HM_Nightfall-mini_v1.1.ioc  STM32F405XX_FLASH.ld  startup_stm32f405xx.s
platform/stm32f413/HM_Nightfall_f413_preorder/: .mxproject  HM_Nightfall_f413_preorder.ioc  STM32F413XX_FLASH.ld
platform/trace/: trace.c  trace.h
scripts/ai/: summarize_codex_result.sh
tools/: flash_stlink  flash_uart  gen_build_info.py  gen_shortest_case_params.py  gen_shortest_turn_bank.py  gh_pr.sh  param_ui.py  serial_capture_csv.py  serial_capture_csv.sh  serial_minicom.sh  serial_monitor.sh
tools/flashing/: README.md  flash_stlink  flash_uart  make_identity_block.py
tools/hil/: README.md  f413_safe_hil.py
tools/log_visualizer/: requirements.txt  run_visualizer.sh  web_visualizer.py
tools/logging/: README.md  analyze_front_match_csv.py  analyze_search_event_log.py  analyze_trace_csv.py  analyze_turn_csv.py  analyze_wall_end_csv.py  export_plotjuggler_csv.py  fit_sensor_distance.py  render_search_dump.py  run_plotjuggler.sh  serial_capture_csv.py  serial_capture_csv.sh  serial_minicom.sh  serial_monitor.sh  serial_terminal.py  trace_bin_dump.py
tools/logging/plotjuggler/: nightfall_f413_tune.xml
tools/logging/visualizer/: requirements.txt  web_visualizer.py
tools/solver_host/: README.md  run_kerilab_samples.sh  run_solver_host.sh  solver_host.c
tools/solver_host/include/: global.h  maze_grid.h
tools/tuning/: README.md  turn_tune.py
(+198 files in other folders)
